[tool.poetry]
name = "ja-icd10"
version = "0.1.2-20210701"
description = "ICD-10 国際疾病分類の日本語情報を扱うためのパッケージ"
authors = ["Yuki Okuda <y.okuda@dr-ubie.com>"]
packages = [
    {include = "icd10"}
]
readme = "README.md"
exclude = ["tools"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
ipdb = "^0.13.9"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.6b0"
isort = "^5.9.2"
pytest = "^6.2.4"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 120
src_paths = ["icd10", "tests", "tools"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
